# no_phish_nfts

./: .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  auth.py  cache.py  create_tables.py  docker-compose.yml  enums.py  helper.py  init.sh  logger.py  main.py  middleware.py  pyproject.toml  sources.json  update_lists.py
api/: router.py
api/routes/: addresses.py  camo.py  contracts.py  domains.py
core/: config.py
db/: sessions.py
db/repositories/: contracts.py  domains.py
db/schemas/: contracts.py  domains.py
db/tables/: base_class.py  contracts.py  domains.py
doc/: production_setup.md
lists/contracts/: custom.json
lists/domains/: custom.json
scripts/: create_db.sql
tests/: conftest.py
tests/test_repositories/: test_contracts.py  test_domains.py
tests/test_routes/: test_contracts.py  test_domains.py
tests/test_schemas/: test_contracts.py  test_domains.py
